--- a/css/style.css
+++ b/css/style.css
@@ -1,1 +1,74 @@
-style
+body{
+    font-family: 'Alegreya Sans SC', serif;
+    background-image: url("../images/concrete_seamless.png");
+    background-color: #f1f1f1
+}
+
+header{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
+
+.nav_links{
+    display: flex;
+}
+
+.card header{
+    background-color: #288088;
+    border-style: solid;
+    border-width: 2px;
+    border-color: #45ADAD;
+    padding-top: 20px;
+    padding-bottom: 20px;
+    border-top-left-radius: 7px;
+    border-top-right-radius: 7px;
+}
+
+.pricing{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.card{
+    flex-basis: 450px;
+}
+
+.gallery img{
+    border-style: solid;
+    border-width: 10px;
+    border-color: #50C7C7;
+    margin: 10px 10px 10px 10px;
+    width: 300px;
+}
+
+.gallery{
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+    align-items: center;
+}
+
+.header{
+    animation: fadeIn 5s;
+}
+
+@keyframes fadeIn {
+0% {width: 50px; opacity:0;}
+100% {width: 425px; opacity:1;}
+}
+
+@media only screen and (min-width: 850px){
+    header img{
+        display: flex;
+        justify-content: start;
+        
+    }
+    .nav_links{
+        display: flex;
+        justify-content: end;
+        color: red;
+    }
+}
