--- a/css/style.css
+++ b/css/style.css
@@ -22,7 +22,7 @@ header{
     color: #0000FF;
 }
 
-.card header{
+.card>header{
     background-color: #288088;
     border-style: solid;
     border-width: 2px;
@@ -90,7 +90,7 @@ to {width: 425px; opacity:1;}
         flex-direction: row;
     }
     
-    .card header{
+    .card>header{
         justify-content: center;
         position: static;
     }
@@ -141,7 +141,7 @@ to {width: 425px; opacity:1;}
         flex-basis: 250px;
     }
 
-    .gallery #gallery{
+    .gallery, #gallery{
         display: none;
     }
 
